# openclaw-desktop

./: .gitignore  README.md
.github/workflows/: build.yml  check-upstream.yml
desktop/: package.json  pnpm-lock.yaml
desktop/splash/: index.html  splash.css  splash.js
desktop/splash/terminal/: index.html  terminal.js
desktop/src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: external-link-hook.js
desktop/src-tauri/src/: lib.rs  main.rs
scripts/: prepare-bundle.ps1  prepare-bundle.sh
